--- a/mathesar_ui/src/component-library/common/styles/variables.scss
+++ b/mathesar_ui/src/component-library/common/styles/variables.scss
@@ -182,7 +182,7 @@ body {
   --outcome-background-color: var(--purple-100);
   --outcome-border-color: var(--purple-300);
   &.theme-dark {
-    --outcome-color: var(--purple-900);
+    --outcome-color: var(--purple-100);
     --outcome-background-color: var(--stormy-800);
     --outcome-border-color: var(--purple-400);
   }
